--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/resources/site-initializer/layout-set/private/css.css
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/resources/site-initializer/layout-set/private/css.css
@@ -30,6 +30,11 @@ a:hover {
 	color: var(--primary);
 }
 
+.container-fluid, 
+.container-fluid-max-xl {
+	position: relative;
+}
+
 /*-----COMPONENTS-----*/
 
 /*Buttons*/
@@ -38,7 +43,7 @@ a:hover {
 	border-radius: 0;
 	font-family: var(--font-family-sans-serif);
 	font-weight: var(--font-weight-bolder);
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 	padding: var(--spacer-2) var(--spacer-4);
 	text-transform: uppercase;
 }
