--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-navbar/index.css
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-navbar/index.css
@@ -10,10 +10,15 @@
 	z-index: 2;
 }
 
+.bootcamp-navbar .container-fluid,
+.bootcamp-navbar .container-fluid-max-xl {
+	padding: 0;
+}
+
 .bootcamp-navbar .nav-item .nav-link {
 	border-bottom: 2px solid transparent;
 	color: inherit;
-	padding: var(--spacer-2) 0;
+	padding: var(--spacer-1) 0;
 }
 
 .bootcamp-navbar .nav-item a:hover,
@@ -35,8 +40,8 @@
 .bootcamp-navbar .portlet .nav-item,
 .bootcamp-navbar .navbar-nav .nav-item {
 	font-weight: var(--font-weight-bold);
-	padding-left: var(--spacer-3);
-	padding-right: var(--spacer-3);
+	padding-left: var(--spacer-2);
+	padding-right: var(--spacer-2);
 }
 
 .bootcamp-navbar .small {
