--- a/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_forms.scss
+++ b/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_forms.scss
@@ -101,4 +101,4 @@ $form-control-inset-margin-y: calc(
 		) / 2
 );
 
-$form-group-item-label-spacer: 0.3125rem !default;
+$form-group-item-label-spacer: 0.3125rem;
