--- a/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_forms.scss
+++ b/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_forms.scss
@@ -45,6 +45,7 @@ $input-danger-border-color: var(
 );
 $input-danger-focus-bg: #{$form-white-color};
 $input-danger-focus-border-color: #{$form-input-focus-color};
+$input-danger-checkbox-label-color: $input-label-color;
 $input-success-bg: var(
 	--form-input-success-bg,
 	var(--color-state-success-lighten)
@@ -55,6 +56,7 @@ $input-success-border-color: var(
 );
 $input-success-focus-bg: #{$form-white-color};
 $input-success-focus-border-color: #{$form-input-focus-color};
+$input-success-checkbox-label-color: $input-label-color;
 $input-warning-bg: var(
 	--form-input-warning-bg,
 	var(--color-state-warning-lighten)
@@ -65,6 +67,7 @@ $input-warning-border-color: var(
 );
 $input-warning-focus-bg: #{$form-white-color};
 $input-warning-focus-border-color: #{$form-input-focus-color};
+$input-warning-checkbox-label-color: $input-label-color;
 
 $form-feedback-indicator-margin-x: 0.25rem;
 
