--- a/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_globals.scss
+++ b/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/variables/_globals.scss
@@ -9,3 +9,13 @@ $rounded-circle-border-radius: var(--border-radius-circle);
 $rounded-pill: var(--border-radius-pill);
 
 $panel-border-radius: 0.5rem;
+
+// Forms
+
+$form-white-color: var(--color-neutral-10);
+$form-input-focus-color: var(--color-focus);
+
+$component-focus-box-shadow: 0 0 0 0.125rem $form-white-color#{','} 0 0 0 0.25rem
+	$form-input-focus-color;
+$component-focus-inset-box-shadow: inset 0 0 0 0.125rem $form-input-focus-color#{','}
+	inset 0 0 0 0.25rem $form-white-color;
