--- a/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/components/_forms.scss
+++ b/modules/apps/frontend-theme/frontend-theme-dialect/src/css/dialect/components/_forms.scss
@@ -161,21 +161,21 @@ fieldset > .lfr-ddm-legend {
 }
 
 .has-error {
-	--condensed-form-input-filled-label-color: var(--color-state-error);
-	--form-feedback-background-color: var(--color-state-error-lighten);
-	--form-feedback-color: var(--color-state-error);
+	--condensed-form-input-filled-label-color: #{$dialect-danger};
+	--form-feedback-background-color: #{$danger-l2};
+	--form-feedback-color: #{$dialect-danger};
 }
 
 .has-success {
-	--condensed-form-input-filled-label-color: var(--color-state-success);
-	--form-feedback-background-color: var(--color-state-success-lighten);
-	--form-feedback-color: var(--color-state-success);
+	--condensed-form-input-filled-label-color: #{$dialect-success};
+	--form-feedback-background-color: #{$success-l2};
+	--form-feedback-color: #{$dialect-success};
 }
 
 .has-warning {
-	--condensed-form-input-filled-label-color: var(--color-state-warning);
-	--form-feedback-background-color: var(--color-state-warning-lighten);
-	--form-feedback-color: var(--color-state-warning);
+	--condensed-form-input-filled-label-color: #{$dialect-warning};
+	--form-feedback-background-color: #{$warning-l2};
+	--form-feedback-color: #{$dialect-warning};
 }
 
 .form-text {
