LPS-139635 Set a min height for the tree to fit the dropdown

--- a/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/main.scss
@@ -132,6 +132,8 @@ html#{$cadmin-selector} {
 			}
 
 			.tree-view {
+				min-height: 300px;
+
 				.lfr-root-node.tree-node-content {
 					align-items: center;
 					display: flex;
