LPS-137508 style adjustments in fragments

--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-sign-in/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-sign-in/index.html
@@ -5,11 +5,11 @@
 		</a>
 
 		<form class="sign-in-form">
-			<p class="sign-in-text mb-5 h3 font-weight-normal">
-				Organically grow the holistic world view of disruptive innovation via workplace diversity.
+			<p class="sign-in-text mb-5 h2 font-weight-normal">
+				Organically grow a disruptive innovation and workplace.
 			</p>
 
-			<div class="form-group mb-3">
+			<div class="form-group mb-2">
 				<label class="form-label" for="exampleInputEmail1">
 					Email address
 				</label>
@@ -31,7 +31,7 @@
 				</label>
 			</div>
 
-			<button class="btn btn-lg btn-primary" type="submit">
+			<button class="bootcamp-btn btn btn-lg btn-primary" type="submit">
 				Sign In<span class="link-arrow ml-3">&#10230;</span>
 			</button>
 
