--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
@@ -4,7 +4,7 @@
 			<img alt="Show/hide videos" src="[resources:bootcamp_arrow_right.svg]" />
 		</button>
 
-		<div class="col pr-0">
+		<div class="col">
 			<video class="courses-video w-100 position-relative" controls="controls" preload="auto" src="" />
 
 			<button class="play btn-unstyled">
