--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-navbar-classroom/index.css
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-navbar-classroom/index.css
@@ -11,8 +11,14 @@
 	z-index: 2;
 }
 
+.bootcamp-navbar .container-fluid,
+.bootcamp-navbar .container-fluid-max-xl {
+	padding: 0;
+}
+
 .bootcamp-navbar .course-name {
 	font-family: var(font-family-sans-serif);
+	font-weight: var(--font-weight-bold);
 	margin-bottom: 2px;
 }
 
