--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-tabs/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-tabs/index.html
@@ -1,5 +1,5 @@
 <div class="component-tabs">
-	<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underlinenavigation-bar navigation-bar-light">
+	<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underlinenavigation-bar navigation-bar-light px-0">
 		<button aria-controls="navigationBarCollapse-${fragmentEntryLinkNamespace}" aria-expanded="false" aria-label="Tabs Toggle Navigation" class="collapsed navbar-toggler navbar-toggler-link" data-toggle="collapse">
 			<span class="navbar-text-truncate">Tab 1</span>
 			<span class="icon-caret-bottom"></span>
