--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/resources/site-initializer/layout-set/private/css.css
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/resources/site-initializer/layout-set/private/css.css
@@ -96,3 +96,22 @@ a:hover {
 .lfr-ddm-checkbox-multiple {
 	font-family: var(--font-family-sans-serif);
 }
+
+.ddm-form-basic-info,
+.portlet-forms-display .icons-container {
+	display: none;
+}
+
+.lfr-ddm-form-submit {
+	float: none !important;
+
+	border-radius: 0;
+	font-family: var(--font-family-sans-serif);
+	font-size: 12px;
+	font-weight: var(--font-weight-bolder);
+	letter-spacing: 2px;
+	margin-top: var(--spacer-2);
+	padding: var(--spacer-2) var(--spacer-4);
+	text-transform: uppercase;
+	width: 100%;
+}
