--- a/modules/apps/site-initializer/site-initializer-raylife/extra/direct-to-customer/src/shared/styles/apps/quote-comparison.scss
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/direct-to-customer/src/shared/styles/apps/quote-comparison.scss
@@ -2,9 +2,10 @@
 	display: flex;
 	flex-wrap: wrap;
 	font-family: $font-family !important;
-	padding: 20px;
 
 	#quote-comparison {
+		margin-left: 15px;
+
 		.quote-content {
 			height: 547px;
 		}
