--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
@@ -13,17 +13,17 @@
 		</div>
 
 		<div class="col-md-3 col-to-hide pt-4 px-0">
-			<h6 class="ml-4 mb-4 font-weight-bold">Course Content</h6>
+			<h6 class="ml-5 mb-4 font-weight-bold">Course Content</h6>
 
-			<a class="btn btn-block btn-unstyled btn-play py-3 px-4" data-lfr-editable-id="video-1" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-1" data-lfr-editable-type="link" href="">
 				Module 1 Name
 			</a>
 
-			<a class="btn btn-block btn-unstyled btn-play py-3 px-4" data-lfr-editable-id="video-2" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-2" data-lfr-editable-type="link" href="">
 				Module 2 Name
 			</a>
 
-			<a class="btn btn-block btn-unstyled btn-play py-3 px-4" data-lfr-editable-id="video-3" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-3" data-lfr-editable-type="link" href="">
 				Module 3 Name
 			</a>
 		</div>
