--- a/modules/apps/site-initializer/site-initializer-raylife/extra/direct-to-customer/src/shared/styles/components/fragments/badges.scss
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/direct-to-customer/src/shared/styles/components/fragments/badges.scss
@@ -38,3 +38,9 @@ button.btn.badge {
 	color: $error-default;
 	fill: $error-default;
 }
+
+.badge-info {
+	background: $info-light;
+	color: $info-default;
+	fill: $info-default;
+}
