--- a/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/liferay.scss
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/liferay.scss
@@ -2,7 +2,8 @@
 
 section#content {
 	#main-content {
-		.quote-comparison-content {
+		.quote-comparison-content,
+		.selected-quote-content {
 			padding-left: 0 !important;
 			padding-right: 0 !important;
 		}
