--- a/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/apps/selected-quote/components/steps/upload-documents.scss
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/src/common/styles/apps/selected-quote/components/steps/upload-documents.scss
@@ -9,98 +9,94 @@
 		}
 
 		.upload-content {
-			.upload-file {
-				.view-file {
-					.flex-column {
-						.card {
-							flex-shrink: 0;
-							gap: initial;
-							height: 176px;
-							width: 176px;
+			.view-file {
+				@media screen and (max-width: 565px) {
+					:nth-child(even) {
+						margin-right: 0 !important;
+					}
+				}
 
-							&.spaced {
-								margin-right: 16px;
-							}
-						}
+				.flex-column {
+					.card {
+						flex-shrink: 0;
+						gap: initial;
+						height: 176px;
+						width: 176px;
+					}
 
+					span {
+						width: 176px;
+					}
+				}
+
+				.ellipsis {
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+				}
+
+				.view-file-document {
+					margin-bottom: -36px;
+
+					.close-icon {
+						cursor: pointer;
+						fill: $color-action-neutral-default;
+						height: 36px;
+						left: 137px;
+						top: -212px;
+						width: 36px;
+						filter: drop-shadow(
+							0 5px 15px rgba(77, 133, 255, 0.12)
+						);
+					}
+
+					.div-document {
 						span {
 							width: 176px;
 						}
-					}
 
-					.ellipsis {
-						overflow: hidden;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-					}
+						.content {
+							border: 1px solid $color-neutral-2;
+							height: 176px;
+							object-fit: cover;
+							width: 176px;
 
-					.view-file-document {
-						margin-bottom: -36px;
-
-						&.view-file-margin-right:not(:last-child) {
-							margin-right: 16px;
-						}
-
-						.close-icon {
-							cursor: pointer;
-							fill: $color-action-neutral-default;
-							height: 36px;
-							left: 137px;
-							top: -196px;
-							width: 36px;
-							filter: drop-shadow(
-								0 5px 15px rgba(77, 133, 255, 0.12)
-							);
-						}
-
-						.div-document {
-							span {
-								width: 176px;
+							.image {
+								img {
+									height: 176px;
+									object-fit: cover;
+									width: 176px;
+								}
 							}
 
-							.content {
-								border: 1px solid $color-neutral-2;
-								height: 176px;
-								object-fit: cover;
-								width: 176px;
+							.lexicon-icon-document-pdf {
+								fill: #af78ff;
+								height: 64px !important;
+								width: 64px !important;
+							}
 
-								.image {
-									img {
-										height: 176px;
-										object-fit: cover;
-										width: 176px;
-									}
-								}
+							.lexicon-icon-document-text {
+								fill: $color-brand-primary;
+								height: 64px !important;
+								width: 64px !important;
+							}
 
-								.lexicon-icon-document-pdf {
-									fill: #af78ff;
-									height: 64px !important;
-									width: 64px !important;
-								}
+							.lexicon-icon-document-table {
+								fill: #50d2a0;
+								height: 64px !important;
+								width: 64px !important;
+							}
 
-								.lexicon-icon-document-text {
-									fill: $color-brand-primary;
-									height: 64px !important;
-									width: 64px !important;
-								}
+							.lexicon-icon-document-presentation {
+								fill: #ffb46e;
+								height: 64px !important;
+								width: 64px !important;
+							}
 
-								.lexicon-icon-document-table {
-									fill: #50d2a0;
-									height: 64px !important;
-									width: 64px !important;
-								}
-
-								.lexicon-icon-document-presentation {
-									fill: #ffb46e;
-									height: 64px !important;
-									width: 64px !important;
-								}
-
-								.lexicon-icon-document-unknown {
-									fill: $color-action-neutral-default;
-									height: 64px !important;
-									width: 64px !important;
-								}
+							.lexicon-icon-document-unknown {
+								fill: $color-action-neutral-default;
+								height: 64px !important;
+								width: 64px !important;
 							}
 						}
 					}
@@ -111,15 +107,13 @@
 					left: 0;
 					top: 64px;
 
-					&.margin-left {
-						margin-left: 16px;
-					}
-
-					&.hide {
-						display: none;
-					}
-
 					.upload-button {
+						.display-mobile {
+							@media screen and (max-width: $breakpoint-phone) {
+								display: none;
+							}
+						}
+
 						.link-button {
 							background: none;
 							border: 1px solid $color-action-primary-default;
@@ -138,7 +132,8 @@
 
 		.upload-alert {
 			.badge {
-				height: 56px;
+				height: fit-content;
+				min-height: 56px;
 
 				&.badge-info {
 					svg {
