--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portal/_dropdowns.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portal/_dropdowns.scss
@@ -9,3 +9,7 @@ html#{$cadmin-selector} {
 .overlay-content .open > .dropdown-menu {
 	display: block;
 }
+
+.dropdown-menu .dropdown-item.active {
+	pointer-events: initial;
+}
